[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Player/Abilities/Flash/Flash.gd" type="Script" id=1]
[ext_resource path="res://assets/Shaders/White_Flash_CanvasMod.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player/Abilities/Flash/Flash_Hitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/Audio/Player/Tinnitus_1s.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/UI/Target/FormulaTargetScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Player/Abilities/Flash/Flash_64_dither.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 1.75
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.35, 0.65, 0.95, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "ability_1"
}, {
"args": [  ],
"method": "ability_2"
}, {
"args": [  ],
"method": "ability_3"
}, {
"args": [  ],
"method": "ability_4"
} ]
}

[node name="Flash" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )
formula_size = 2

[node name="FormulaTargetScreen" parent="." instance=ExtResource( 5 )]
target_mode = 1
formula_range = 128
attack_formula = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Ability = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="White" parent="CanvasLayer" instance=ExtResource( 2 )]
color = Color( 1, 1, 1, 0 )

[node name="FormulaHitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )
formula_name = "Flash"
base_potency = 2.0
randomness = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FormulaHitbox"]
visible = false

[node name="Sprite" type="Sprite" parent="FormulaHitbox"]
visible = false
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
